--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "fer-07-project",
     "version": "1.0.0",
+    "type": "module",
     "description": "",
     "main": "index.html",
     "scripts": {
