--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "fer-07-project",
     "version": "1.0.0",
-    "type": "module",
+    "type": "commonjs",
     "description": "",
     "main": "index.html",
     "scripts": {
