--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dependencies": {
         "flickity": "^3.0.0",
         "json-server": "^0.17.3",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "pm2": "^5.3.0"
     }
 }
