--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "flickity": "^3.0.0",
         "json-server": "^0.17.3",
         "path": "^0.12.7",
-        "pm2": "^5.3.0"
+        "pm2": "^5.3.0",
+        "uuid": "^9.0.0"
     }
 }
